# OHC-Dashboard-Backend

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/agents/graph/: call_qc_graph.py  test_graph.py
app/agents/nodes/: call_diarization_node.py  communication_quality_node.py  consent_capture_node.py  final_qc_node.py  keyword_detection_node.py  objection_handling_node.py  qualification_completeness_node.py  script_adherence_node.py  sentiment_detection_node.py  transcript_generator_node.py
app/agents/prompts/: __init__.py  call_diarization_prompt.py  communication_quality_prompt.py  consent_capture_prompt.py  (+6 more)
app/core/: auth.py  config.py  database.py  dependencies.py  jwt_management.py  password_management.py
app/helper/: __init__.py  agent_helper.py  openai_helper.py  user_helper.py
app/models/: agent_model.py  user_model.py
app/router/: __init__.py  admin.py  qc.py  users.py
app/schema/: __init__.py  agent_schema.py  call_diarization_response_schema.py  communication_quality_schema.py  consent_capture_schema.py  final_qc_report_schema.py  keyword_detection_schema.py  objection_handling_schema.py  qualification_completeness_schema.py  script_adherence_schema.py  sentiment_detection_schema.py  user_schema.py
documentation/: QC_Bot.md  agent_endpoints.md
migrations/: env.py
migrations/versions/: 272660f6188d_add_is_active_to_user_model.py  4b633c5704c6_added_new_ghl_id_in_the_agent_table.py  77961c8327a8_added_agent_table.py  c78cbe6b4ca0_initial_migration.py
static/: qc_analyzer.html
testing/: add_sample_agents.py
(+5 files in other folders)
