[project]
name = "ohc-dashboard-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.1",
    "authlib>=1.6.6",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
