[project]
name = "ohc-dashboard-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "greenlet>=3.3.1",
    "gunicorn>=24.1.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "itsdangerous>=2.2.0",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "openai>=2.16.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.46",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
]
